// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates IDE Integration files 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
Written prettier.config.js
Written stylelint.config.js
Written .gitignore
",
}
`;

exports[`Creates IDE Integration files 2`] = `
"// This configuration was generated by Crafty
// This file is generated to improve IDE Integration
// You don't need to commit this file, nor need it to run \`crafty build\`

module.exports = {
    \\"plugins\\": [
        \\"__PATH__/packages/stylelint-config-swissquote/index.js\\"
    ],
    \\"extends\\": [
        \\"__PATH__/packages/stylelint-config-swissquote/recommended.js\\"
    ],
    \\"rules\\": {
        \\"swissquote/no-type-outside-scope\\": null,
        \\"plugin/no-unsupported-browser-features\\": [
            true,
            {
                \\"severity\\": \\"warning\\",
                \\"browsers\\": \\"> 0.25%, Edge >= 17, Safari >= 11, iOS >= 11, Chrome >= 66, Firefox >= 60, IE >= 11, not op_mini all\\",
                \\"ignore\\": [
                    \\"rem\\",
                    \\"calc\\",
                    \\"css-initial-value\\",
                    \\"css-image-set\\",
                    \\"css-gradients\\"
                ]
            }
        ]
    }
};
"
`;

exports[`Creates IDE Integration files 3`] = `
"// This configuration was generated by Crafty
  // This file is generated to improve IDE Integration
  // You don't need to commit this file

  module.exports = {
    \\"overrides\\": [
        {
            \\"files\\": [
                \\"*.css\\",
                \\"*.scss\\"
            ],
            \\"options\\": {
                \\"tabWidth\\": 4
            }
        }
    ]
};
"
`;

exports[`Creates IDE Integration files 4`] = `
"/prettier.config.js
/stylelint.config.js
"
`;

exports[`Lints with the command 1`] = `
Object {
  "status": 2,
  "stdall": "
[__:__:__] Starting Crafty __version__...

css/imported.scss
 1:1  ✖  Types are allowed only inside a scope  swissquote/no-type-outside-scope

css/style.scss
  4:1   ✖  Types are allowed only inside a scope                                 swissquote/no-type-outside-scope
  6:14  ✖  Unexpected unit                                                       length-zero-no-unit
 10:1   ✖  Expected class selector \\".notAComponent\\" to match specified pattern   selector-class-pattern
 15:1   ✖  A state must be linked to a component                                 swissquote/no-state-without-component
 20:1   ✖  Expected \\"#no-id\\" to have no more than 0 ID selectors                 selector-max-id
 28:13  ✖  Expected nesting depth to be no more than 2                           max-nesting-depth
 38:16  ✖  Insert \\"⏎\\"                                                            prettier/prettier

",
}
`;

exports[`Lints with the command in legacy mode 1`] = `
Object {
  "status": 2,
  "stdall": "
[__:__:__] Starting Crafty __version__...

css/style.scss
  6:14  ✖  Unexpected unit   length-zero-no-unit
 38:16  ✖  Insert \\"⏎\\"        prettier/prettier

",
}
`;

exports[`Lints with the command with custom config 1`] = `
Object {
  "status": 2,
  "stdall": "
[__:__:__] Starting Crafty __version__...

css/style.scss
  6:14  ✖  Unexpected unit                                                       length-zero-no-unit
 10:1   ✖  Expected class selector \\".notAComponent\\" to match specified pattern   selector-class-pattern
 15:1   ✖  A state must be linked to a component                                 swissquote/no-state-without-component
 20:1   ✖  Expected \\"#no-id\\" to have no more than 0 ID selectors                 selector-max-id
 28:13  ✖  Expected nesting depth to be no more than 2                           max-nesting-depth
 38:16  ✖  Insert \\"⏎\\"                                                            prettier/prettier

",
}
`;
